src/objects/Loaner__c/Loaner__c.object-meta.xml
<CustomObject>
    <label>Loaner</label>
    <nameField>
        <displayFormat>Loaner-{00000000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loaners</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>