src/objects/Loaner__c/fields/AC_Mgr_Distributor__c.field-meta.xml
<CustomField>
    <fullName>AC_Mgr_Distributor__c</fullName>
    <description>A/C Mgr Distributor</description>
    <label>A/C Mgr Distributor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>