src/objects/Loaner__c/fields/AC_Mgr_Sales_rep__c.field-meta.xml
<CustomField>
    <fullName>AC_Mgr_Sales_rep__c</fullName>
    <description>A/C Mgr Sales rep</description>
    <label>A/C Mgr Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>