src/objects/Loaner__c/fields/Additional_Details_and_or_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details_and_or_Comments__c</fullName>
    <description>Additional Details and/or Comments</description>
    <inlineHelpText>Additional Details and/or Comments</inlineHelpText>
    <label>Additional Details and/or Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>