src/objects/Loaner__c/fields/Approval_Email_Templete__c.field-meta.xml
<CustomField>
    <fullName>Approval_Email_Templete__c</fullName>
    <formula>IF(RecordType.DeveloperName=&apos;Loaner_Request&apos;,
IF(ISPICKVAL(Loaner_Duration__c,&apos;No_Return&apos;),&apos;Loaner_No_Return_Email_Template&apos;,&apos;Loaner_Line_Item_Approval_Email_Template&apos;),&apos;Loaner_Line_Item_Approval_Email_Template&apos;)</formula>
    <label>Approval Email Templete</label>
    <type>Text</type>
</CustomField>