src/objects/Loaner__c/fields/Branch_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Branch_Distributor__c</fullName>
    <label>Branch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>