src/objects/Loaner__c/fields/ByPassProcessbuilder__c.field-meta.xml
<CustomField>
    <fullName>ByPassProcessbuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPassProcessbuilder</label>
    <type>Checkbox</type>
</CustomField>