src/objects/Loaner__c/fields/City_ship_to__c.field-meta.xml
<CustomField>
    <fullName>City_ship_to__c</fullName>
    <formula>Address_ship_to__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>