src/objects/Loaner__c/fields/Commercial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Contact__c</fullName>
    <label>Commercial Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>