src/objects/Loaner__c/fields/Company_Name_End_Cust__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_End_Cust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Email Betty Dea with end customer name and website if it cannot be found in drop down list.</inlineHelpText>
    <label>Company Name - End Customer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Company End Customer should be an Active Top Level Account.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Top Level Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Account.Berlin_Account__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loaners</relationshipLabel>
    <relationshipName>Loaners</relationshipName>
    <type>Lookup</type>
</CustomField>