src/objects/Loaner__c/fields/Contact_Text__c.field-meta.xml
<CustomField>
    <fullName>Contact_Text__c</fullName>
    <label>Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>