src/objects/Loaner__c/fields/Count_Of_Invalid_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Invalid_Line_Item__c</fullName>
    <label>Count Of Invalid Line Item</label>
    <summaryFilterItems>
        <field>Loaner_Line__c.Initial_Error_Message_Present__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Loaner_Line__c.Loaner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>