src/objects/Loaner__c/fields/Count_Of_Line_Items_Approved__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Line_Items_Approved__c</fullName>
    <label>Count Of Line Items Approved</label>
    <summaryFilterItems>
        <field>Loaner_Line__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Rejected, Draft, Approval Pending, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Loaner_Line__c.Loaner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>