src/objects/Loaner__c/fields/Count_Of_Line_Items_Fields_Not_Approved__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Line_Items_Fields_Not_Approved__c</fullName>
    <label>Count Of Line Items Fields Not Approved</label>
    <summaryFilterItems>
        <field>Loaner_Line__c.Line_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Loaner_Line__c.Loaner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>