src/objects/Loaner__c/fields/Count_OF_Line_Items_In_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Count_OF_Line_Items_In_Approval_Status__c</fullName>
    <label>Count OF Line Items In Approval Status</label>
    <summaryFilterItems>
        <field>Loaner_Line__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Loaner_Line__c.Loaner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>