src/objects/Loaner__c/fields/count_of_line_items_not_approved_and_pso__c.field-meta.xml
<CustomField>
    <fullName>count_of_line_items_not_approved_and_pso__c</fullName>
    <description>Count Of Line Items In Approved or Rejected State</description>
    <label>Count of Line Items Not Approved And PSO</label>
    <summaryFilterItems>
        <field>Loaner_Line__c.Line_Status__c</field>
        <operation>equals</operation>
        <value>Rejected, Draft, Approval Pending, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Loaner_Line__c.Loaner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>