src/objects/Loaner__c/fields/CountofLineItems__c.field-meta.xml
<CustomField>
    <fullName>CountofLineItems__c</fullName>
    <label>Count of Line Items</label>
    <summaryForeignKey>Loaner_Line__c.Loaner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>