src/objects/Loaner__c/fields/Country_ship_to__c.field-meta.xml
<CustomField>
    <fullName>Country_ship_to__c</fullName>
    <formula>Address_ship_to__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>