src/objects/Loaner__c/fields/Current_User_is_RSM__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_RSM__c</fullName>
    <description>Used to identify if the currently running user is the RSM assigned to this loaner</description>
    <formula>if($User.Id =   RSM_PLM_Approval__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is RSM</label>
    <type>Checkbox</type>
</CustomField>