src/objects/Loaner__c/fields/Current_User_is_VP__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_VP__c</fullName>
    <description>This field is used to identify whether the currently logged in VP is the VP of the RSM listed on the record.</description>
    <formula>if($User.Id = RSM_PLM_Approval__r.VP__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is VP</label>
    <type>Checkbox</type>
</CustomField>