src/objects/Loaner__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Datacenter/Carrier (EMT)</fullName>
            </value>
            <value>
                <fullName>Type1</fullName>
                <isActive>false</isActive>
                <label>Type1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>