src/objects/Loaner__c/fields/Date_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_Reminder_Date__c</fullName>
    <label>Date Reminder Date</label>
    <type>Date</type>
</CustomField>