src/objects/Loaner__c/fields/Date_Reminder_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Date_Reminder_DateTime__c</fullName>
    <label>Date Reminder DateTime</label>
    <type>DateTime</type>
</CustomField>