src/objects/Loaner__c/fields/DistributorFirmGroupName__c.field-meta.xml
<CustomField>
    <fullName>DistributorFirmGroupName__c</fullName>
    <formula>Firm_Name_Distributor__r.Legacy_Id__c</formula>
    <label>DistributorFirmGroupName</label>
    <type>Text</type>
</CustomField>