src/objects/Loaner__c/fields/ECO_Number__c.field-meta.xml
<CustomField>
    <fullName>ECO_Number__c</fullName>
    <inlineHelpText>Enter valid ECO Number or put &quot;TBD&quot; if ECO Number not available yet.</inlineHelpText>
    <label>ECO Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>