src/objects/Loaner__c/fields/Est_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Production_Date__c</fullName>
    <label>Est Production Date</label>
    <type>Date</type>
</CustomField>