src/objects/Loaner__c/fields/EVP_Finisar_Approval__c.field-meta.xml
<CustomField>
    <fullName>EVP_Finisar_Approval__c</fullName>
    <label>EVP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loaner_Line_Approval_Status</valueSetName>
    </valueSet>
</CustomField>