src/objects/Loaner__c/fields/Extend_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Extend_To_Date__c</fullName>
    <label>Extend To Date</label>
    <type>Date</type>
</CustomField>