src/objects/Loaner__c/fields/Extension_Request_Status_Check__c.field-meta.xml
<CustomField>
    <fullName>Extension_Request_Status_Check__c</fullName>
    <formula>OR(  ISPICKVAL(Status_Approval__c , &apos;Draft&apos;) ,ISPICKVAL(Status_Approval__c , &apos;Pending Approval&apos;),ISPICKVAL(Status_Approval__c , &apos;Pending Sales Order&apos;),
ISPICKVAL(Status_Approval__c , &apos;Cancelled&apos;)
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension Request Status Check</label>
    <type>Checkbox</type>
</CustomField>