src/objects/Loaner__c/fields/FAE_Distributor__c.field-meta.xml
<CustomField>
    <fullName>FAE_Distributor__c</fullName>
    <description>FAE Distributor</description>
    <label>FAE Distributor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>