src/objects/Loaner__c/fields/FAE_Sales_rep__c.field-meta.xml
<CustomField>
    <fullName>FAE_Sales_rep__c</fullName>
    <description>FAE Sales Rep</description>
    <label>FAE Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>