src/objects/Loaner__c/fields/Firm_Name_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Distributor Firm</description>
    <label>Distributor Firm Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Distributor Firm</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loaners (Firm Name)</relationshipLabel>
    <relationshipName>Loaners3</relationshipName>
    <type>Lookup</type>
</CustomField>