src/objects/Loaner__c/fields/Firm_Name_Sales_rep__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name_Sales_rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Rep Accounts.</description>
    <label>Sales Rep Firm Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please enter only the Sales Rep Firm Names</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Sales Rep Firm</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Sales Rep Firms</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loaners (Firm Name)</relationshipLabel>
    <relationshipName>Loaners2</relationshipName>
    <type>Lookup</type>
</CustomField>