src/objects/Loaner__c/fields/Free_Sample__c.field-meta.xml
<CustomField>
    <fullName>Free_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Sample</label>
    <type>Checkbox</type>
</CustomField>