src/objects/Loaner__c/fields/Initial_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Initial_Error_Message__c</fullName>
    <description>This field will store the Error Messages that is sent from Oracle. Sales Rep will refer to this message and correct the line items.</description>
    <label>Error Message</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>