src/objects/Loaner__c/fields/Inside_Sales_Sales_rep__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Sales_rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales-Sales Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Firm_Name_Sales_rep__c</field>
            <operation>equals</operation>
            <valueField>User.Contact.AccountId</valueField>
        </filterItems>
        <infoMessage>Sales Rep Firm Name should match Inside sales-Sales Rep -Contact -AccountId</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Loaners_Inside_Sales_Sales_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>