src/objects/Loaner__c/fields/InsideSalesActiveCheck__c.field-meta.xml
<CustomField>
    <fullName>InsideSalesActiveCheck__c</fullName>
    <formula>Inside_Sales_Finisar__r.IsActive</formula>
    <label>InsideSalesActiveCheck</label>
    <type>Checkbox</type>
</CustomField>