src/objects/Loaner__c/fields/Line_Items_Count_not_Approved_or_Reject__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Count_not_Approved_or_Reject__c</fullName>
    <label>Line Items Count not  Approved or Reject</label>
    <summaryFilterItems>
        <field>Loaner_Line__c.Line_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved, Not Required, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Loaner_Line__c.Loaner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>