src/objects/Loaner__c/fields/Loaner_Category__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Category__c</fullName>
    <inlineHelpText>This field links to Order Type on the Loaner SO.  It cannot be changed if selected incorrectly.  Check with Inside Sales/RSM first and make sure your selection is correct before submitting loaner for approval.</inlineHelpText>
    <label>Loaner Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qual Loaner TLC</fullName>
            </value>
            <value>
                <fullName>Standard loaner</fullName>
            </value>
            <value>
                <fullName>First Article loaner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>