src/objects/Loaner__c/fields/Loaner_Duration__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Duration__c</fullName>
    <inlineHelpText>SVP approval needed if over 180 days or for &quot;No Return&quot; sample request.</inlineHelpText>
    <label>Loaner Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loaner_Duration</valueSetName>
    </valueSet>
</CustomField>