src/objects/Loaner__c/fields/Loaner_Duration_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Duration_In_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>SVP approval needed if over 180 days or for &quot;No Return&quot; sample request.</inlineHelpText>
    <label>Loaner Duration In Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>