src/objects/Loaner__c/fields/Loaner_Error_Present__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Error_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loaner Error Present</label>
    <type>Checkbox</type>
</CustomField>