src/objects/Loaner__c/fields/Loaner_Extension_Created_On__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Extension_Created_On__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Loaner Extension Created On</label>
    <type>Date</type>
</CustomField>