src/objects/Loaner__c/fields/Loaner_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Legacy_ID__c</fullName>
    <description>This stores the Id of the loaner records from Siebel.</description>
    <externalId>true</externalId>
    <label>Loaner Legacy ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>