src/objects/Loaner__c/fields/Loaner_Request__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loaner Requests on Extension Requests</description>
    <label>Loaner Request</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Loaner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Loaner Request</value>
        </filterItems>
        <filterItems>
            <field>Loaner__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Loaner Request Read Only</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Loaner__c</referenceTo>
    <relationshipLabel>Extension Requests</relationshipLabel>
    <relationshipName>Loaners</relationshipName>
    <type>Lookup</type>
</CustomField>