src/objects/Loaner__c/fields/Loaner_Requestor_Company__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Requestor_Company__c</fullName>
    <description>This will Display the Company Name of the Creator.</description>
    <formula>CreatedBy.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loaner Requestor Company</label>
    <type>Text</type>
</CustomField>