src/objects/Loaner__c/fields/Loaner_Ship_From_Finisar__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Ship_From_Finisar__c</fullName>
    <inlineHelpText>Keep Default=&quot;Factory Stock&quot; for any loaner shipping from factory through Sales Order.  Use &quot;Transfer From Existing Loaner&quot; for loaner transfer only.  Do not change to other choices unless you have discussed with Betty.</inlineHelpText>
    <label>Loaner Ship From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ship_From</valueSetName>
    </valueSet>
</CustomField>