src/objects/Loaner__c/fields/Loaner_Total__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Total__c</fullName>
    <label>Loaner Total</label>
    <summarizedField>Loaner_Line__c.Loaner_Total__c</summarizedField>
    <summaryForeignKey>Loaner_Line__c.Loaner__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>