src/objects/Loaner__c/fields/Location_ship_to__c.field-meta.xml
<CustomField>
    <fullName>Location_ship_to__c</fullName>
    <formula>Address_ship_to__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>