src/objects/Loaner__c/fields/New_Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Address__c</fullName>
    <inlineHelpText>Input new customer name/address here if not found in the [Ship-To Company Name/Address] drop down list.</inlineHelpText>
    <label>New Customer/Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>