src/objects/Loaner__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>&quot;if Loaner ship from is &quot;&quot;Transfer From Existing Loaner&quot;&quot;, user should enter SO number in notes, if Loaner ship from is &quot;&quot;Other&quot;&quot; user should enter Expalanation.
if the Opportunity Type is Not &quot;New Opportunity - Misc&quot; user should Enter Expalanation&quot;</description>
    <label>Notes</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>