src/objects/Loaner__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity #</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loaners</relationshipLabel>
    <relationshipName>Loaners</relationshipName>
    <type>Lookup</type>
</CustomField>