src/objects/Loaner__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <inlineHelpText>Select &quot;New Opportunity&quot; only if this loaner links to an Opportunity in Salesforce.Then there should only be 1 P/N on this loaner which matches to the Opportunity P/N.Select any other choice if this is a stand-alone loaner which can include multiple P/Ns.</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Opportunity</fullName>
            </value>
            <value>
                <fullName>New Opportunity - &lt; 100K SAM</fullName>
            </value>
            <value>
                <fullName>Not New Opportunity -  Demand already forecasted</fullName>
            </value>
            <value>
                <fullName>Not New Opportunity - Misc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>