src/objects/Loaner__c/fields/Oracle_order_header_id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_order_header_id__c</fullName>
    <label>Oracle order header id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>