src/objects/Loaner__c/fields/Order_creation_status_message__c.field-meta.xml
<CustomField>
    <fullName>Order_creation_status_message__c</fullName>
    <label>Order creation status message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>