src/objects/Loaner__c/fields/order_processed_date_in_Oracle__c.field-meta.xml
<CustomField>
    <fullName>order_processed_date_in_Oracle__c</fullName>
    <description>order processed date in Oracle</description>
    <inlineHelpText>order processed date in Oracle</inlineHelpText>
    <label>order processed date in Oracle</label>
    <type>Date</type>
</CustomField>