src/objects/Loaner__c/fields/Postal_Code_ship_to__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_ship_to__c</fullName>
    <formula>Address_ship_to__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>