src/objects/Loaner__c/fields/Project_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Project_Engineer__c</fullName>
    <label>Project Engineer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>