src/objects/Loaner__c/fields/Qual_Sample_Finisar__c.field-meta.xml
<CustomField>
    <fullName>Qual_Sample_Finisar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qual Sample</label>
    <type>Checkbox</type>
</CustomField>