src/objects/Loaner__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>TEXT( RSM_PLM_Finisar__r.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSM Region</label>
    <type>Text</type>
</CustomField>