src/objects/Loaner__c/fields/Region_Approval__c.field-meta.xml
<CustomField>
    <fullName>Region_Approval__c</fullName>
    <formula>Inside_Sales_Finisar__r.State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region - Do Not Use</label>
    <type>Text</type>
</CustomField>