src/objects/Loaner__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>