src/objects/Loaner__c/fields/RSM_PLM_Approval__c.field-meta.xml
<CustomField>
    <fullName>RSM_PLM_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>startsWith</operation>
            <value>RSM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Loaners1</relationshipName>
    <type>Lookup</type>
</CustomField>